--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/app.js",
+    "cron": "nodemon src/cronJob.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,8 +19,10 @@
     "express": "^4.18.2",
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "multer": "1.4.5-lts.1",
     "mysql2": "^3.1.0",
+    "node-cron": "^3.0.2",
     "sequelize": "^6.28.0"
   },
   "devDependencies": {
