--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multer": "1.4.5-lts.1",
     "mysql2": "^3.1.0",
     "node-cron": "^3.0.2",
+    "omise": "^0.9.0",
     "sequelize": "^6.28.0"
   },
   "devDependencies": {
